# whisper-ctranslate2-json2srt

./: README.md  pyproject.toml
src/json2lrc/: __init__.py  arranger.py  cli.py  converter.py  parser.py  segmenter.py  splitter.py
src/whisper_ctranslate2_json2srt/: __init__.py  arranger.py  cli.py  splitter.py
src/whisper_ctranslate2_json2srt/parsers/: __init__.py  vtt_parser.py  whisper_json_parser.py
src/word2sent/: __init__.py  arranger.py  converter.py  model.py
src/word2sent/parsers/: whisper_json_parser.py
tests/: test_converter.py
tests/fixtures/: sample_video.json  sample_video_json2lrc.srt
