[project]
name = "json2lrc"
version = "0.2.0"
description = "Convert Whisper JSON to LRC/SRT, preserving segments and splitting only long ones"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
json2lrc = "json2lrc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/json2lrc"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv]
default-groups = ["dev"]
