[project]
name = "word2sent"
version = "0.2.0"
description = "Convert Whisper JSON to LRC/SRT, preserving segments and splitting only long ones"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
word2sent = "word2sent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/word2sent"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv]
default-groups = ["dev"]
